<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.post.PostSellActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="left"
            android:textSize="16dp"
            android:layout_weight="1"
            android:text="取消"
            android:textColor="#000000" />

        <Button
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_marginRight="15dp"
            android:id="@+id/saveDraft"
            android:background="@drawable/btn_radius_white_decoration"
            android:text="存草稿"
            android:textColor="#707070"></Button>

        <Button
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_marginRight="15dp"
            android:id="@+id/publishGoods"
            android:background="@drawable/btn_radius_orange_decoration"
            android:text="发布"
            android:textColor="#DCDCDC"></Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <EditText
            android:id="@+id/post_reason"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_weight="3"
            android:hint="买家都在关心品牌型号，入手渠道，转手原因......"
            android:gravity="left"
            android:background="@null"
            android:textSize="15sp"
            android:singleLine="false"
            android:scrollbars="vertical"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxEms="11"
            android:text="@string/app_location"
            android:textSize="14sp" />


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <ImageView
            android:id="@+id/left_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:scaleType="centerInside"
            android:src="@drawable/ps_ic_back" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxEms="11"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recycler"
                android:id="@+id/cate"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginLeft="3dp"
                    android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/app_category"
                    android:textSize="20sp"
                    android:padding="8dp"/>
                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:scrollbars="none">
                    <LinearLayout
                        android:id="@+id/category_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                    </HorizontalScrollView>
                </LinearLayout>
            </ScrollView>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cate"
                android:id="@+id/bran"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginLeft="3dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/app_brand"
                        android:textSize="20sp"
                        android:padding="8dp"/>
                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:scrollbars="none">
                        <LinearLayout
                            android:id="@+id/brand_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        </LinearLayout>

                    </HorizontalScrollView>
                </LinearLayout>
            </ScrollView>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bran"
                android:id="@+id/new_ol"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginLeft="3dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/app_new_old"
                        android:textSize="20sp"
                        android:padding="8dp"/>
                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:scrollbars="none">
                        <LinearLayout
                            android:id="@+id/new_old_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                        </LinearLayout>

                    </HorizontalScrollView>
                </LinearLayout>
            </ScrollView>


            <TextView
                android:id="@+id/tv_delete_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:alpha="0"
                android:background="@color/app_color_cc_red"
                android:drawableTop="@drawable/ic_normal_delete"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:alpha="1" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/recycler"
                android:layout_alignBottom="@+id/recycler"
                android:background="@color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:overScrollMode="never" />

        </RelativeLayout>


    </RelativeLayout>


</LinearLayout>